# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.167 2007/11/03 20:23:02 ulm Exp $

  03 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-hack-local-variables.patch,
  emacs-cvs-22.1.50_p20070829-r1.ebuild, emacs-cvs-23.0.0_p20070920.ebuild:
  Security fix for function hack-local-variables, CVE-2007-5795, bug #197958.

  24 Oct 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r1.ebuild,
  emacs-cvs-22.1.50_p20070829-r1.ebuild, emacs-cvs-23.0.0_p20070920.ebuild,
  emacs-cvs-23.0.50.ebuild, emacs-cvs-23.0.60.ebuild:
  Add standard comment to site-init file.

  13 Oct 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-no-x-compile.patch, emacs-cvs-23.0.0_p20070920.ebuild:
  Fix compilation failure with USE=-X.

*emacs-cvs-23.0.60 (12 Oct 2007)

  12 Oct 2007; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-23.0.60.ebuild:
  Live CVS ebuild for unicode-2 branch.

  12 Oct 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r1.ebuild,
  emacs-cvs-22.1.50_p20070829-r1.ebuild, emacs-cvs-23.0.0_p20070920.ebuild,
  emacs-cvs-23.0.50.ebuild:
  Clarify wording of postinst message, thanks to hkbst for suggesting this.

*emacs-cvs-23.0.0_p20070920 (12 Oct 2007)

  12 Oct 2007; Ulrich Mueller <ulm@gentoo.org>
  -files/emacs-cvs-22.1.50_p20070829-makeinfo-regexp.patch,
  +files/emacs-cvs-makeinfo-regexp.patch,
  +emacs-cvs-23.0.0_p20070920.ebuild:
  Snapshot of Emacs unicode-2 branch, before the multi-tty merge.

  12 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -emacs-cvs-23.0.0-r7.ebuild:
  Remove defunct ebuild for unicode-2 branch.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.1.50-r1.ebuild, emacs-cvs-22.1.50_p20070829-r1.ebuild,
  emacs-cvs-23.0.0-r7.ebuild, emacs-cvs-23.0.50.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

  09 Oct 2007; Ulrich Mueller <ulm@gentoo.org>