@@ -9,10 +9,10 @@ AUX emacs-cvs-no-x-compile.patch 452 RMD160 6c698c2ce80c496079810da7290315ff579c
 DIST emacs-cvs-22.1.50_p20070829.tar.bz2 20915594 RMD160 47f3c1c543de65c49deadbcdf4e83236aaa68f1b SHA1 6223e5b4cde078814648306b095f6081f56eea77 SHA256 c27196e9359d5ad4f30e3552c7897c995798324a323a4b47060b98426a71891f
 DIST emacs-cvs-23.0.0_p20070920.tar.bz2 21944733 RMD160 4ca3f66530c44a82e1badba4dfc934b2e5e5b8d7 SHA1 7e8b99d695adaec619837a6eec22c04ac69cb7aa SHA256 c38d4be31e047f5a470b1664a2721b3dcb83b3876cb3490a86e05804aebf4f2a
 EBUILD emacs-cvs-22.1.50-r1.ebuild 8481 RMD160 18cea1e79e9a7939d05ed140ccbf7121e7a4844a SHA1 b7d2fb4e537ef96fbfe9b35747f67819e7bcebbf SHA256 2ca37dc904a3dc79ec90a29397259f752589f993d6c2f617d029e857d487cfbc
-EBUILD emacs-cvs-22.1.50_p20070829-r1.ebuild 8138 RMD160 4ad2c08060496061c4060ab9339422fdb0891127 SHA1 95af2488c9bac68e307e40b885eaac62893630eb SHA256 fc8094e1d44205362c29350272e47ff68ce5edfe2eba9c808d4538f8bb911226
+EBUILD emacs-cvs-22.1.50_p20070829-r1.ebuild 8247 RMD160 b35697dee5d9185433bce97758d0ac80bc23cb4b SHA1 a0093d8102100859add707220dbd5eb492374e80 SHA256 05e849c91f5faedf151463061d9c78958eac800b74e7c935905dbcd20e4a0df1
 EBUILD emacs-cvs-23.0.0-r7.ebuild 8702 RMD160 87559268d8c41aa5295e8f88b760415658dd9117 SHA1 f8d7b62101191c9ba319664e2c61b40b3de278c9 SHA256 b959cb8cca7e493ded5caac6693456516bb1eec9e50a0cc6902560f34553965e
-EBUILD emacs-cvs-23.0.0_p20070920.ebuild 8429 RMD160 66c915a4eea0032fc8bd05f05a1f011790b19047 SHA1 3c73aa3a4fe6544c0082e6d9bfb26d801102eacb SHA256 cd77d77996e228b7b353f9416cba6067df8d67174d49593670d6af647b7544db
-EBUILD emacs-cvs-23.0.50.ebuild 8505 RMD160 cf26ae433e59c4684833c9049bd207933cf175ef SHA1 8d9085b953b95a06387c493053e36383974195e4 SHA256 f9ffc00b9c808a92daae597289e5f98345a088069f7051f18b47d8e0baf35e6a
-EBUILD emacs-cvs-23.0.60.ebuild 8719 RMD160 3fdc50dcd895434cf9cc04f48d1591b471a17458 SHA1 7a4effc5eb9e6df2133fb11d79e7bfabb912cde7 SHA256 6b725eebd644a7e5e6de5e0edad7aa7679a510abd878fa897acc8095a8fe9d57
-MISC ChangeLog 32164 RMD160 6026a86cd3f41a60bd9e44fd0e100d28d1747347 SHA1 cdbd22b9461405b752e07b4ee5838691317a6728 SHA256 a64e82e60d791925707eacd419f1bdabd60a99bc0d9055fca7fb960395033ece
+EBUILD emacs-cvs-23.0.0_p20070920.ebuild 8538 RMD160 29abcef71760d2f5fbced1befc2ceb8b2ee64754 SHA1 79e3447bed7a40f2b203fbb4e3b5a9710748aa06 SHA256 e2883dd737222b7c76178838852fc64ae4eb4107233c059df329aaab394072d3
+EBUILD emacs-cvs-23.0.50.ebuild 8614 RMD160 2f2352bf953f729df10ba9a51396d8f0aa404b85 SHA1 8166af3056b8d609cea8ff8e45c88f6865be55e6 SHA256 f784e3c658d4cdc0ca60c56bf9b902157e6539f33c7793cb64bae5a47a65931b
+EBUILD emacs-cvs-23.0.60.ebuild 8828 RMD160 5a6ec4bb6d8707413d310fce8b6981ea242a9285 SHA1 855fc79d31255af223eb1877496b0a843f2fbf11 SHA256 322003037915bf94dd9abcf5b8c388e5eadecc7f5c9e88787e3bcd41789d9040
+MISC ChangeLog 32396 RMD160 06124e26ff988f8118644b21169fa1ea7f972e12 SHA1 0abea08575b21c2e690316847d4617ac05f1702a SHA256 3385ed4813012eadaad17b74d0f0f9867e009e36c3281ad90dafda8e5ce38afe
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
