@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.167 2007/11/03 20:23:02 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.168 2007/11/05 14:02:49 ulm Exp $
+
+  05 Nov 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r1.ebuild,
+  emacs-cvs-22.1.50_p20070829-r1.ebuild, emacs-cvs-23.0.0_p20070920.ebuild,
+  emacs-cvs-23.0.50.ebuild, emacs-cvs-23.0.60.ebuild:
+  New kerberos USE flag.
 
   03 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
   +files/emacs-cvs-hack-local-variables.patch,
